<resources>
    <string name="app_name">4Runner</string>
    <string name="imageserver">http://4runnerapp.com.br/ServerPhp/img/</string>
    <string name="imageservermini">http://4runnerapp.com.br/ServerPhp/img_thumb/</string>
    <string name="admtreinador">adm@4runnerapp.com.br</string>
    <string name="Abanner_ad_unit_idTeste">ca-app-pub-3940256099942544/6300978111</string>
    <string name="banner_ad_unit_id">ca-app-pub-8995076627360959/3198808028</string>
    <string name="banner_ad_unit_id_mainTreinador">ca-app-pub-8995076627360959/5116729623</string>
    <string name="corridaEmAndamento">Uma corrida está em andamento</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="entrar">Entrar</string>
    <string name="conclusao">Conclusão</string>
    <string name="cadastrese">Cadastre-se</string>
    <string name="title_activity_main_corredor">MainCorredorActivityActivity</string>
    <string name="testedecampo">Teste de campo</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="openDrawer"></string>
    <string name="closeDrawer"></string>
    <string name="objetivo">Objetivo</string>
    <string name="action_example">Example action</string>
    <string name="email">E-mail</string>
    <string name="senha">Senha</string>
    <string name="esqueciSenha">Esqueci minha senha</string>
    <string name="localizartreinador">Localizar treinador</string>
    <string name="localizarporemail">Localizar por email</string>
    <string name="localizartreinadorporposicaogeografica">Localizar por posição geográfica</string>
    <string name="localizartreinadorporposicaogeografica1">Serão listados todos os treinadores que atuam próximos da localização informada por você no cadastro.</string>
    <string name="localizarcorredorporposicaogeografica">Localizar por posição geográfica</string>
    <string name="localizarcorredorporposicaogeografica1">Serão listados todos os corredores que estão próximos da localização informada por você no cadastro.</string>
    <string name="localizarporposicaogeograficaerro">Você não possui uma localização válida cadastrada. Para utilizar essa funcionalidade informe sua localização no menu de configurações</string>
    <string name="meutreino">Meu Treino</string>
    <string name="meutreinador">Meu Treinador</string>
    <string name="home">Home</string>
    <string name="historico">Histórico</string>
    <string name="corridas_livres">Corridas Livres</string>
    <string name="estatisticas">Estatísticas</string>
    <string name="amigos">Amigos</string>
    <string name="configuracoes">Configurações</string>
    <string name="title_activity_run">RunActivity</string>
    <string name="novidades">Novidades</string>
    <string name="rankings">Rankings</string>
    <string name="title_activity_chat">ChatActivity</string>
    <string name="run">Run</string>
    <string name="title_activity_cadastro_corredor">CadastroCorredorActivity</string>
    <string name="limpar">Limpar</string>
    <string name="masculino">Masculino</string>
    <string name="feminino">Feminino</string>
    <string name="sexo">Sexo</string>
    <string name="nome">Nome</string>
    <string name="datanasc">Data de Nascimento</string>
    <string name="cadastroinfobasic">Informações básicas</string>
    <string name="ola">Olá, </string>
    <string name="falesobrevoce">Fale um pouco sobre você</string>
    <string name="falesobreprof">Fale um pouco sobre sua experiência profissional</string>
    <string name="avancar">Avançar</string>
    <string name="corredor">Corredor</string>
    <string name="treinador">Treinador</string>
    <string name="telefone">Telefone</string>
    <string name="peso">Peso</string>
    <string name="altura">Altura</string>
    <string name="pulsoEmRepouso">Pulso em repouso</string>
    <string name="erroTenteNovamente">Ops… algo deu errado, tente novamente.</string>
    <string name="cref">Número do CREF</string>
    <string name="FaleFormacao">Fale sobre sua formação</string>
    <string name="formacao">Formação</string>
    <string name="escolhafoto">Escolha uma foto</string>
    <string name="tirarfoto">Tirar Foto</string>
    <string name="escolherdagaleria">Escolher da galeria</string>
    <string name="cancelar">Cancelar</string>
    <string name="preenchacampo">Preencha este campo</string>
    <string name="title_activity_main_treinador">MainTreinadorActivity</string>
    <string name="exercicios">Exercícios</string>
    <string name="meuscorredores">Meus Corredores</string>
    <string name="title_activity_cadastro_exercicio">CadastroExercicioActivity</string>
    <string name="title_activity_cadastro_treino">CadastroTreinoActivity</string>
    <string name="nomeexercicio">Nome do exercício</string>
    <string name="descricaoexercicio">Descrição do exercício</string>
    <string name="preenchaoscamposabaixo">Preencha os campos abaixo com as informações solicitadas.</string>
    <string name="cadastrodeexercicios">Cadastro de exercícios</string>
    <string name="cadastrar">Cadastrar</string>
    <string name="title_activity_historico_por_treino">HistoricoPorTreinoActivity</string>
    <string name="title_activity_dia_de_treino">DiaDeTreinoActivity</string>
    <string name="diatreino_comtreino">Olá! Suas próximas atividades estão abaixo.</string>
    <string name="diatreino_semtreino">Você não possui atividades hoje.</string>
    <string name="confirma_cadastro_exercicio">Confirma o cadastro deste exercicio?</string>
    <string name="sim">Sim</string>
    <string name="nao">Não</string>
    <string name="nometreino">Nome do treino</string>
    <string name="qtdsemanastreino">Quantidade de semanas do treino: </string>
    <string name="qtddiastreino">Quantidade de dias de treino em cada semana: </string>
    <string name="intensidade">Intensidade</string>
    <string name="grupoexercicios">Grupo de exercícios</string>
    <string name="repeticoes">Repetições</string>
    <string name="novogrupoexerc">Novo grupo de exercícios</string>
    <string-array name="spinner_estatisticas">
        <item>Geral</item>
        <item>Por treino</item>
        <item>Corridas livres</item>
    </string-array>
    <string-array name="teste_treino">
        <item>Treino Atual</item>
        <item>Treino #3</item>
        <item>Treino #2</item>
        <item>Treino #1</item>
    </string-array>
    <string-array name="teste_semana">
        <item>Semana 1</item>
        <item>Semana 2</item>
        <item>Semana 3</item>
        <item>Semana 4</item>
    </string-array>
    <string-array name="teste_dia">
        <item>Dia 1</item>
        <item>Dia 2</item>
        <item>Dia 3</item>
        <item>Dia 4</item>
    </string-array>
    <string name="distancia">Distância</string>
    <string name="tempo">Tempo</string>
    <string name="velocidademax">Velocidade Max</string>
    <string name="ritmomedio">Ritmo Médio</string>
    <string name="calorias">Calorias</string>
    <string name="title_activity_perfil">PerfilActivity</string>
    <string name="title_activity_meu_corredor_treinador">MeuCorredorTreinadorActivity</string>
    <string name="alunodesde">Aluno desde:</string>
    <string name="perfil">Perfil</string>
    <string name="treinos">Treinos</string>
    <string name="logof">Sair</string>
    <string name="desejasair">Realmente deseja sair do aplicativo?</string>
    <string name="title_activity_obter_localizacao">ObterLocalizacaoActivity</string>
    <string name="obterlocalizacao">Obter Localização</string>
    <string name="pular">Pular</string>
    <string name="informalocalizacao">Agora, nos informe a localização em que atua</string>
    <string name="descricaolocalizacao">Essa localização será utilizada para indicar você à corredores que optarem por
                                        procurar treinadores em sua região.
                                        Se não estiver próximo ao seu local de atuação, não se preocupe, você pode fazer isso
                                        depois através do menu de configurações.</string>
    <string name="permissaolocalizacaotreinador">Permito que meu perfil seja apresentado à corredores próximos da minha localização</string>
    <string name="permissaolocalizacaocorredor">Permito que meu perfil seja apresentado à treinadores próximos da minha localização enquanto eu não estiver associado a um treinador</string>
    <string name="okentendi">OK! Entendi.</string>
    <string name="cadastrarlocalizacao">Está certo de que quer cadastrar essa localização?
    Não se preocupe, você poderá mudar isso quando quiser :)</string>
    <string name="esperevoutentar">Espere...</string>
    <string name="tenhocerteza">Tenho certeza!</string>
    <string name="ops">Ops!</string>
    <string name="opserro">Ops... ocorreu algum erro. Tente novamente</string>
    <string name="esqueceulocalizacao">Acho que você se esqueceu de clicar em "Obter Localização".</string>
    <string name="ok">OK</string>
    <string name="title_activity_obter_localizacao_corredor">ObterLocalizacaoCorredorActivity</string>
    <string name="informalocalizacaocorredor">Agora, nos informe sua localização</string>
    <string name="descricaolocalizacaocorredor">Essa localização será utilizada para que possamos apresentar à você os treinadores
                                            que atuam próximo a sua região.
                                        Se não estiver próximo da sua região, não se preocupe, você pode fazer isso
                                        depois através do menu de configurações.</string>
    <string name="title_activity_localizar_treinador">LocalizarTreinadorActivity</string>
    <string name="procureumtreinador">Procure um treinador</string>
    <string name="title_activity_visualiza_perfil_treinador">VisualizaPerfilTreinadorActivity</string>
    <string name="confirmar">Confirmar</string>
    <string name="associaraotreinador">Associar-se ao treinador?</string>
    <string name="associaraocorredor">Associar-se ao corredor?</string>
    <string name="treinadorentraracontato">Esse treinador receberá sua solicitação e entrará em contato com você</string>
    <string name="desejaassociaraocorredor">Deseja associar-se a esse corredor?</string>
    <string name="solicitacaoenviada">Solicitação enviada!</string>
    <string name="quersercorredor">quer ser seu/sua corredor(a)!</string>
    <string name="cliqueparavermais">Clique para ver mais</string>
    <string name="title_activity_visualiza_perfil_corredor">VisualizaPerfilCorredorActivity</string>
    <string name="parabensnovocorredor">Parabéns! você tem um novo corredor.</string>
    <string name="alterarperfil">Alterar</string>
    <string name="iniciar">Iniciar</string>
    <string name="pausar">Pausar</string>
    <string name="parar">Parar</string>
    <string name="salvarcorrida">Salvar corrida</string>
    <string name="observacoes">Observações</string>
    <string name="testesdecampo">Testes de campo</string>
    <string name="datadoteste">Data do Teste</string>
    <string name="volume">Volume</string>
    <string name="metros">Metros</string>
    <string name="minutos">Minutos</string>
    <string name="datainiciotreino">Data de início</string>
    <string name="diasdetreino">Dias de treino</string>
    <string name="segundaFeira">Segunda-feira</string>
    <string name="tercaFeira">Terça-feira</string>
    <string name="quartaFeira">Quarta-feira</string>
    <string name="quintaFeira">Quinta-feira</string>
    <string name="sextaFeira">Sexta-feira</string>
    <string name="sabado">Sábado</string>
    <string name="domingo">Domingo</string>
    <string name="cadastroteste">Cadastro de teste de campo</string>
    <string name="avaliarTreinador">Avaliar treinador</string>
    <string name="avaliar">Avaliar</string>
</resources>