<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:fitsSystemWindows="true"
    tools:context="com.team4runner.forrunner.CadastroTesteActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cadastroteste"
            android:layout_margin="10dp"
            android:textColor="@color/primary_dark"
            android:textSize="@dimen/abc_text_size_large_material"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:orientation="horizontal">

            <android.support.design.widget.TextInputLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:hint="@string/volume">

                <EditText
                    android:id="@+id/txtVolume"
                    android:layout_width="120dp"
                    android:layout_height="wrap_content"
                    android:inputType="numberDecimal" />
            </android.support.design.widget.TextInputLayout>

            <RadioGroup
                android:id="@+id/radiogrouptpVolume"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center|end"
                android:layout_weight="2"
                android:baselineAligned="false"
                android:clickable="true"
                android:focusable="true"
                android:measureWithLargestChild="false"
                android:orientation="horizontal"
                android:transitionGroup="true">


                <RadioButton
                    android:id="@+id/rbMetros"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked="true"
                    android:text="@string/metros" />

                <RadioButton
                    android:id="@+id/rbMinutos"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:checked="false"
                    android:text="@string/minutos" />
            </RadioGroup>

        </LinearLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:hint="@string/datadoteste">

            <EditText
                android:id="@+id/txtDataTeste"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="date" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:hint="@string/observacoes">

            <EditText
                android:id="@+id/txtObs"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </android.support.design.widget.TextInputLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="bottom"
            android:gravity="right|bottom"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btnCadastrar"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:background="@color/primary"
                android:textColor="@color/blanktext"
                android:text="@string/cadastrar" />

            <Button
                android:id="@+id/btnCancelar"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:background="@color/primary"
                android:textColor="@color/blanktext"
                android:layout_marginLeft="6dp"
                android:text="@string/cancelar" />


        </LinearLayout>

    </LinearLayout>


</ScrollView>
