<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="false"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="8dp">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="vertical">


            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/editTextNomeTreino"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/nometreino"
                    android:imeOptions="actionNext"
                    android:inputType="textCapSentences"
                    android:paddingTop="@dimen/abc_list_item_padding_horizontal_material" />
            </android.support.design.widget.TextInputLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="@string/objetivo" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text=":" />

            </LinearLayout>


            <Spinner
                android:id="@+id/spinnerObj"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:drawSelectorOnTop="true" />


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:layout_weight="2"
                    android:paddingBottom="@dimen/abc_list_item_padding_horizontal_material"
                    android:text="@string/qtdsemanastreino" />

                <TextView
                    android:id="@+id/textViewQtdSemanas"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:layout_weight="1"
                    android:paddingBottom="@dimen/abc_list_item_padding_horizontal_material"
                    android:text="0"
                    android:textColor="@color/accent"
                    android:textSize="@dimen/abc_text_size_medium_material" />

            </LinearLayout>


            <SeekBar
                android:id="@+id/seekBarSemanas"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="15dp"
                android:backgroundTint="@color/accent"
                android:progress="0"
                android:progressBackgroundTint="@color/accent"
                android:progressTint="@color/accent"
                android:theme="@style/AppTheme" />

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">


                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <EditText
                        android:id="@+id/dataInicio"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:editable="false"
                        android:focusable="false"
                        android:hint="@string/datainiciotreino"
                        android:imeOptions="actionNext"
                        android:inputType="none"
                        android:paddingTop="@dimen/abc_list_item_padding_horizontal_material" />

                </android.support.design.widget.TextInputLayout>

                <LinearLayout
                    android:id="@+id/clickCalendario"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:clickable="true"
                    android:orientation="vertical">

                </LinearLayout>

            </FrameLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="@string/diasdetreino" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text=":" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="6dp"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <CheckBox
                        android:id="@+id/checkDomingo"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/domingo" />

                    <CheckBox
                        android:id="@+id/checkSegunda"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/segundaFeira" />

                    <CheckBox
                        android:id="@+id/checkTerca"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/tercaFeira" />

                    <CheckBox
                        android:id="@+id/checkQuarta"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/quartaFeira" />


                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical">


                    <CheckBox
                        android:id="@+id/checkQuinta"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/quintaFeira" />


                    <CheckBox
                        android:id="@+id/checkSexta"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/sextaFeira" />

                    <CheckBox
                        android:id="@+id/checkSabado"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/sabado" />

                </LinearLayout>

            </LinearLayout>


        </LinearLayout>

        <!--android.support.design.widget.FloatingActionButton
            android:id="@+id/fabCadastrarTreinoEspecifico"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentRight="true"
            android:layout_marginBottom="16dp"
            android:layout_marginRight="16dp"
            android:backgroundTint="@color/accent"
            android:src="@drawable/ic_plus_white_48dp"
            app:borderWidth="0dp"
            app:elevation="6dp"
            app:fabSize="normal"
            app:pressedTranslationZ="12dp"
            app:rippleColor="@color/button_material_light" /-->


    </RelativeLayout>


</android.support.design.widget.CoordinatorLayout>