<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:fitsSystemWindows="true"
    tools:context="com.team4runner.forrunner.CadastroTesteActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cadastrodeexercicios"
            android:layout_margin="10dp"
            android:textColor="@color/primary_dark"
            android:textSize="@dimen/abc_text_size_large_material"/>


        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:hint="@string/nomeexercicio"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/editTextNomeExercicio"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:imeOptions="actionNext"
                android:inputType="textCapSentences"
                android:layout_marginTop="60dp"
                android:paddingTop="@dimen/abc_list_item_padding_horizontal_material" />
        </android.support.design.widget.TextInputLayout>


        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:hint="@string/descricaoexercicio"
            android:layout_marginBottom="16dp"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/editTextDescricaoExercicio"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:imeOptions="actionDone"
                android:inputType="textMultiLine"
                android:layout_marginTop="30dp"
                android:paddingTop="@dimen/abc_list_item_padding_horizontal_material" />
        </android.support.design.widget.TextInputLayout>



        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="bottom"
            android:gravity="right|bottom"
            android:orientation="horizontal">


            <Button
                android:id="@+id/btnCadastrar"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:background="#d2009688"
                android:textColor="@color/blanktext"
                android:text="@string/cadastrar" />

            <Button
                android:id="@+id/btnCancelar"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:background="#d2009688"
                android:textColor="@color/blanktext"
                android:layout_marginLeft="6dp"
                android:text="@string/cancelar" />



        </LinearLayout>

    </LinearLayout>


</ScrollView>
