<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:fitsSystemWindows="true"
    tools:context="com.team4runner.forrunner.CadastroExercicioActivity">

    <include
        android:id="@+id/toolbar"
        layout="@layout/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/preenchaoscamposabaixo"
        android:textSize="@dimen/abc_text_size_title_material" />

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:hint="@string/nomeexercicio"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/editTextNomeExercicio"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:imeOptions="actionNext"
            android:inputType="textCapSentences"
            android:layout_marginTop="60dp"
            android:paddingTop="@dimen/abc_list_item_padding_horizontal_material" />
    </android.support.design.widget.TextInputLayout>


    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:hint="@string/descricaoexercicio"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/editTextDescricaoExercicio"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:imeOptions="actionDone"
            android:inputType="textMultiLine"
            android:layout_marginTop="30dp"
            android:paddingTop="@dimen/abc_list_item_padding_horizontal_material" />
    </android.support.design.widget.TextInputLayout>


</LinearLayout>
