<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:fitsSystemWindows="true"
    tools:context="com.team4runner.forrunner.CadastroTesteActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:layout_gravity="center"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:text="@string/avaliarTreinador"
            android:textColor="@color/primary_dark"
            android:textSize="@dimen/abc_text_size_large_material" />


        <RatingBar
            android:id="@+id/ratingTreinador"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:clickable="true"
            android:numStars="5"
            android:paddingBottom="25dp"
            android:paddingTop="25dp"
            android:progressTint="#FFD700"
            android:rating="2.5" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="bottom"
            android:gravity="right|bottom"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btnCancelar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="6dp"
                android:background="@color/primary"
                android:text="@string/cancelar"
                android:textColor="@color/blanktext" />


            <Button
                android:id="@+id/btnAvaliar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/primary"
                android:text="@string/avaliar"
                android:textColor="@color/blanktext" />

        </LinearLayout>

    </LinearLayout>


</ScrollView>
